many cosmetic changes, buggy metrics

--- a/static/ajax-solr/templates/bodybody_group.html
+++ b/static/ajax-solr/templates/bodybody_group.html
@@ -6,8 +6,8 @@
 </div>
 
 <div class="content"> 
-<h2> Group {{ group }}</h2>
-{{#istag}} <h3>Tag {{ tag }}</h3> {{/istag}}
+<h3> Collaboration <a href="{{siteprefix}}/explorer/group?fqGroupName={{group}}">{{ group }}</a></h3>
+{{#istag}} <h4>Tag {{ tag }}</h4> {{/istag}}
 <hr/>
 <div style="display: none;" class="userloggedout">
  Please <a class="userlogin" href="#">log in</a> to see your saved items.
