--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -6,7 +6,9 @@
 </div>
 
 <div class="content"> 
-{{#istag}} <h3>Tag {{ tag }}</h3> {{/istag}}
+<h3> Saved Searches, Publications, and Observations </h3>
+{{#istag}} <h4>Tag {{ tag }}</h4> {{/istag}}
+<hr/>
 <div style="display: none;" class="userloggedout">
  Please <a class="userlogin" href="#">log in</a> to see your saved items.
 </div>
