--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -328,3 +328,8 @@ a.sorter {
 .topbar div > ul a.isurround, .nav a.isurround {
     padding: 0;
 }
+
+span.spanner {
+    padding:1px;
+    border: 1px solid black;
+}
