--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -28,9 +28,9 @@
 				<li class="{{ isitchosenhelp }}"><a href="{{ siteprefix }}/explorer/help">Help</a></li>
                 <li class="{{ isitchosensaved }}"><a href="{{ siteprefix }}/explorer/saved">Saved</a></li>
                 <li  class="menu dropdown {{ isitchosengroup }}"> 
-                    <a class="dropdown-toggle menu" href="#" id="groups">Groups</a> 
+                    <a class="dropdown-toggle menu" href="#" id="groups">Collaborations</a> 
                     <ul id="groupsmenu" class="menu-dropdown"> 
-                        <li><a class="newgroupfancybox" href="#addgroupdiv">New Group</a></li>
+                        <li><a class="newgroupfancybox" href="#addgroupdiv">New Collaboration</a></li>
                         <li class="divider"></li>
                     </ul> 
                 </li>
