more throwing, more metrics, some looks

--- a/static/ajax-solr/templates/bodybody_observations.html
+++ b/static/ajax-solr/templates/bodybody_observations.html
@@ -4,6 +4,8 @@
   <ul id="selection"></ul> 
 
   <a id="thrower" class="label success" style="display:none">Continue in Publications</a>
+  <a id="metricsthrower" class="label" style="display:none">METRICS</a>
+  <span id="numpubs"></span>
   <h5>Search</h5> 
   <span id="search_help">(press ESC to close suggestions)</span> 
   <ul id="search"> 
