--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -5,6 +5,8 @@
   <h3>Current Selection</h3> 
   <ul id="selection"></ul>
   <a id="thrower" class="label success" style="display:none">Continue in Observations</a>
+  <a id="metricsthrower" class="label" style="display:none">METRICS</a>
+  <span id="numpubs"></span>
   <h5>Search</h5> 
   <span id="search_help">(press ESC to close suggestions)</span> 
   <ul id="search"> 
