mispelled image name

--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -21,7 +21,7 @@
 	        </p-->
             <ul class="nav secondary-nav pull-right"> 
                 <li>&nbsp;&nbsp;</li>
-                <li><a class="isurround" href="http://usvao.org"><img height="36" alt="VAO" src="{{ staticprefix }}/images/VAOLogo.png"></img></a></li>
+                <li><a class="isurround" href="http://usvao.org"><img height="36" alt="VAO" src="{{ staticprefix }}/images/VAOlogo.png"></img></a></li>
                 <li>&nbsp;&nbsp;</li>
                 <li><a class="isurround" href="http://adslabs.org"><img height="36" alt="ADSLabs" src="{{ staticprefix }}/images/adslogo_labs.jpg"></img></a></li>
                 <li>&nbsp;&nbsp;</li>
