--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -6,8 +6,8 @@
                 <li class="{{ isitchosenpublications }}"><a href="{{ siteprefix }}/explorer/publications">Publications</a></li> 
                 
                 <li class="{{ isitchosenobservations }}"><a href="{{ siteprefix }}/explorer/observations">Observations</a></li>
-                <li class="{{ isitchosenobjects }}"><a href="{{ siteprefix }}/explorer/objects">Objects</a></li>
-				<li class="{{ isitchosencatalogs }}"><a href="{{ siteprefix }}/explorer/catalogs">Catalogs</a></li>
+                <!--li class="{{ isitchosenobjects }}"><a href="{{ siteprefix }}/explorer/objects">Objects</a></li>
+				<li class="{{ isitchosencatalogs }}"><a href="{{ siteprefix }}/explorer/catalogs">Catalogs</a></li-->
                 <!--li class="{{ isitchosenproposals }}"><a href="{{ siteprefix }}/explorer/proposals">Proposals</a></li-->
                 
             </ul>
@@ -25,7 +25,7 @@
                 <li>&nbsp;&nbsp;</li>
                 <li><a class="isurround" href="http://adslabs.org"><img height="36" alt="ADSLabs" src="{{ staticprefix }}/images/adslogo_labs.jpg"></img></a></li>
                 <li>&nbsp;&nbsp;</li>
-				<li class="{{ isitchosenhelp }}"><a href="{{ siteprefix }}/explorer/help">Help</a></li>
+				<!--li class="{{ isitchosenhelp }}"><a href="{{ siteprefix }}/explorer/help">Help</a></li-->
                 <li class="{{ isitchosensaved }}"><a href="{{ siteprefix }}/explorer/saved">Saved</a></li>
                 <li  class="menu dropdown {{ isitchosengroup }}"> 
                     <a class="dropdown-toggle menu" href="#" id="groups">Collaborations</a> 
