chandra non ra bug (which seemed like text bug, metrics bug due to not unbinding, and other stuff like null bug and collabs for non users are fixed

--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -6,7 +6,7 @@
   <ul id="selection"></ul>
   <a id="thrower" class="label success" style="display:none">Continue in Observations</a>
   <!--div id="metricsthrowerdiv" style="display:none"><iframe id="metricsthroweriframe"></iframe></div-->
-  <a id="metricsthrower" class="label" style="display:none">METRICS</a>
+  <a id="metricsthrower" class="label success" style="display:none">METRICS</a>
   <span id="numpubs"></span>
   <h5>Search</h5> 
   <span id="search_help">(press ESC to close suggestions)</span> 
