--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -30,12 +30,13 @@
                 <li  class="menu dropdown {{ isitchosengroup }}"> 
                     <a class="dropdown-toggle menu" href="#" id="groups">Collaborations</a> 
                     <ul id="groupsmenu" class="menu-dropdown"> 
-                        <li><a class="newgroupfancybox" href="#addgroupdiv">New Collaboration</a></li>
+                        <li><a class="userlogin userloggedout" href="#">Login to Activate</a></li>
+						<li><a class="userloggedin newgroupfancybox" href="#addgroupdiv">New Collaboration</a></li>
                         <li class="divider"></li>
                     </ul> 
                 </li>
                 <li>
-                    <a href="#" class="userlogin userloggedout" id="loginhref" style="display: none; cursor: pointer;">login</a>
+                    <a class="userlogin userloggedout" id="loginhref" style="display: none; cursor: pointer;">login</a>
                 </li>
                 <li class="{{isitchosenuser}}">
                     <a id="userhref" class="userloggedin" style="display: none; cursor: pointer;"></a>
