--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -52,7 +52,7 @@ var mygroups=[];
 
  <!--link rel="stylesheet" type="text/css" href="ext/colorbox.css" media="screen" /> 
   <script type="text/javascript" src="ext/jquery.colorbox.js"></script-->
-  <script type="text/javascript" src="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.js"></script>
   <link rel="stylesheet" href="{{ staticprefix }}/ext/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 
   <script type="text/javascript" src="{{ staticprefix }}/ext/jquery.tablesorter/jquery.tablesorter.min.js"></script>
