small changes on user and help page to make it doable

--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -333,3 +333,11 @@ span.spanner {
     padding:1px;
     border: 1px solid black;
 }
+
+a:hover {
+ cursor:pointer;
+}
+
+ol.normal li{
+    color:#404040;
+}
