--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -1,5 +1,6 @@
 <div class="sidebar">
 	<div class="well">
+		<h3>Search</h3><br/>
 		<form id="qsearchform" class="form-stacked" action="">
 		<fieldset>
 			<input class="large" id="qtext" type="text"/><br/><br/>
@@ -21,6 +22,13 @@
 			<input type="button" class="btn small primary" id="searchsubmit" value="Search" name="Submit"/>
 		</fieldset>
 		</form>
+		<h3>Explore</h3><br/>
+		<ul>
+			<li><a href="{{siteprefix}}/explorer/publications">Publications</a></li>
+			<li><a href="{{siteprefix}}/explorer/observations">Observations</a></li>
+			<li>Objects (Coming Soon)</li>
+			<li>Catalogs (Coming Soon)</li>
+		</ul>
 	</div>
 </div>
 <div class="content">
@@ -33,7 +41,7 @@
 <hr/>
 <div style="display: none;" class="userloggedout">
 <p>
- Please <a class="userlogin" href="#">log in</a> to see your home page.
+ Please <a class="userlogin">log in</a> to see your home page.
 </p>
 <h3> How to Use the AstroExplorer </h3>
 <p>
