--- a/static/ajax-solr/templates/bodybody_help.html
+++ b/static/ajax-solr/templates/bodybody_help.html
@@ -1,10 +1,12 @@
 <div class="sidebar">
 	<div class="well">
-		<h3>Useful Links</h3>
+		<h3>Useful Links</h3><br/>
 		<ul>
-			<li>Link1</li>
-			<li>Link2</li>
-			<li>Link3</li>
+			<li><a href="http://portal.usvao.org/portal/Mashup/Clients/Portal/DataDiscovery.html">VAO Data Discovery Tool</a></li>
+			<li><a href="http://labs.adsabs.harvard.edu/ui/">ADS Labs Steamlined Search</a></li>
+			<li><a href="http://labs.adsabs.harvard.edu/fulltext/">ADS Labs Full Text Search</a></li>
+			<li><a href="http://simbad.u-strasbg.fr/simbad/sim-fbasic">SIMBAD</a></li>
+			<li><a href="https://docs.google.com/present/view?id=dg4d27sr_11388kfvbcf">IVOA Presentation</a></li>
 		</ul>
 	</div>
 </div>
@@ -46,7 +48,8 @@
 First log on, and along the way try and save queries, publications, and datasets.
 Save results at each point so we have an interesting set of search results to play with.
 </p>
-<ol>
+<p>
+<ol class="normal">
 <li>
 Describe the main page, displaying publications and facets.  Point out the number of publications displayed and the four type of facets available on the left (publications, objects, observations, proposals).  Point out that one can sort results in two ways (publication date or citations), ascending or descending.
 </li>
@@ -90,7 +93,7 @@ Showcase the use of metrics to evaluate impact of proposals.  Start from publica
 Show “saved” and collaborations, highlight things that have been saved along the way.
 </li>
 </ol>
-
+</p>
 
     
 </div>
