--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -71,7 +71,7 @@
 </div>
   
 <div style="display: none;" class="userloggedin">
-<a type="button" class="btn small primary newgroupfancybox" href="#addgroupdiv">Add Group</a>
+<a type="button" class="btn small primary newgroupfancybox" href="#addgroupdiv">Add Collaboration</a>
 <div id="owner_groups" class="saved-items"></div>	
 <div id="pending_invitations" class="saved-items"></div>
 <div id="member_groups" class="saved-items"></div>
