lots of help text with images, take2

--- a/static/ajax-solr/templates/bodybody_help.html
+++ b/static/ajax-solr/templates/bodybody_help.html
@@ -151,7 +151,10 @@ You can also click "more" on individual observations to access metrics correspon
 </p>	
 </li>
 <li>
-Similarly, we can use metrics to evaluate impact of proposals.  Start from publications tab, select Chandra, scroll down to Proposal facets and select “Fabian” from the PI facet section.  This generates a list of 73 observations (147 publications).  Click on “Metrics” to get the aggregate metrics number for all of them.
+<p>
+Similarly, we can use metrics to evaluate impact of proposals.  Start from the publications page, select mission CHANDRA, scroll down to Proposal facets and select “Fabian” from the PI facet section.  This generates a list of 73 observations (147 publications).  Click on “Metrics” to get the aggregate metrics number for all of them. This is shown in the following two images.
+<img width="412" src="{{staticprefix}}/images/helpimgs/Publicationsf1.jpg"/>
+<img width="400" src="{{staticprefix}}/images/helpimgs/Publicationsf2.jpg"/>
 </li>
 <li>
 Show “saved” and collaborations, highlight things that have been saved along the way.
