lots of help text with images, take3

--- a/static/ajax-solr/templates/bodybody_help.html
+++ b/static/ajax-solr/templates/bodybody_help.html
@@ -40,7 +40,7 @@
 	This enables one to save queries, resources (publications and observations), tag them, and optionally share them with a group of
 	collaborators.
 </p>
-<h3>Script to understand using the application.</h3>
+<h3>Tour and Tutorial</h3>
 <br/>
 <ol class="normal">
 <li>
@@ -61,7 +61,10 @@ could decide to login (2) by clicking the link on the upper right. Also note the
 <img width="600" src="{{staticprefix}}/images/helpimgs/Home2-1-1.jpg"/>
 <br/>
 <p>
-	When you log in you are presented with a page that shoes you the collaborations you created, have been invited to, or are a member of. You can create new collaborations using the "Add Collaboration" (1) Button or the Collaborations Menu (2). You can also invite people to your collaboration, decline invitations, delete collaborations, or accept invitations.
+	When you log in you are presented with a page that shoes you the collaborations you created, have been invited to, or are a member of. You can create new collaborations using the "Add Collaboration" (1) Button or the Collaborations Menu (2). You can also invite people to your collaboration, decline invitations, delete collaborations, or accept invitations. Perhaps these collaborations are your local research groups, with your graduate students and your postdocs. And perhaps they span the globe, as so many of our modern working groups do. Or even maybe, they are a journal club, or undergraduate course, or just shared interests. 
+</p>
+<p>
+	Each of these actions works in the following way: you click the checkboxes on the left, and perform the action in bulk on them. A Mark All and Clear All are provided for quick marking. More ways to access this information and operate on it will be forthcoming.
 </p>
 </li>
 
@@ -153,11 +156,48 @@ You can also click "more" on individual observations to access metrics correspon
 <li>
 <p>
 Similarly, we can use metrics to evaluate impact of proposals.  Start from the publications page, select mission CHANDRA, scroll down to Proposal facets and select “Fabian” from the PI facet section.  This generates a list of 73 observations (147 publications).  Click on “Metrics” to get the aggregate metrics number for all of them. This is shown in the following two images.
-<img width="412" src="{{staticprefix}}/images/helpimgs/Publicationsf1.jpg"/>
-<img width="400" src="{{staticprefix}}/images/helpimgs/Publicationsf2.jpg"/>
+</p>
+<br/>
+<img width="500" src="{{staticprefix}}/images/helpimgs/Publicationsf1.jpg"/>
+<img width="330" src="{{staticprefix}}/images/helpimgs/Publicationsf2.jpg"/>
+<br/>
 </li>
 <li>
-Show “saved” and collaborations, highlight things that have been saved along the way.
+<p>
+While following along, I hope you have been saving searches, publications, and observations, for, there are some interesting ways in
+AstroExplorer to organize and share the results of your searching and exploring. Let us first look at the Saved Items page, accessible from the 'Saved' link in the black bar at the top:
+</p>
+<br/>
+<img width="800" src="{{staticprefix}}/images/helpimgs/Saved-1.jpg"/>
+<br/>
+<p>
+Firstly, once you save an item, you can publish it (or share it) into a group or collaboration. The modus operandi for all actions on this page is, as usual, select items, and then do an operation in bulk on it. Thus we can use the controls in (1) to choose a group, and save the items in question into that group. Secondly, as seen in (2), one can view pubs or obsvs selected in the Publications or Observations pages respectively by hitting the appropriate view button.
+</p>
+<p>
+	In addition to being able to share items into collaborations, you might want to tag them. This reproduces and enhance some of the functionality that <a href="http://myads.harvard.edu/">MyADS</a> has provided for a while now. Enter one tag at a time (3), after selecting the items you want to tag. An item may have as many tags as you like. The tags correspond to libraries in the MYADS interface, but are freer form, and many-to-many in their relationship to items. The list of tags on the left (4) will update and you can select the tag you want to view.
+</p>
+</li>
+<li>
+<p>
+	But wait, thats not all! You can see your collaborations by clicking on the collaborations menu, as seen in the left image in the panel below. When you choose a collaboration, you get a page similar to the 'Saved' page, but with less options, as seen in the image on the right.
+</p>
+<br/>
+<img width="242" src="{{staticprefix}}/images/helpimgs/collabmenu.jpg"/>
+<img width="560" src="{{staticprefix}}/images/helpimgs/Collaboration2-1.jpg"/>
+<br/>
+<p>	
+	Notice on the left side of the right image, the tags. We compute the union of the tags that all collaborators save into the group, and show you all the tags that everyone used. This is a step up from del.icio.us style social bookmarking, as the visibility of tags allows groups to develop their own descriptive language for the resources they are bookmarking. Thus some assets may be tagged 'lensing' by some members of a collaboration, and this language might take root.
+</p>
+<p> 
+	One can select a particular tag using the list of the tags on the left side, the result being this:
+</p>
+<br/>
+<img width="800" src="{{staticprefix}}/images/helpimgs/Collaboration-1.jpg"/>
+<br/>
+<p>
+	Here one can see the results of choosing the tag 'tagsfive' in the group 'truckers' (1). (If you are wondering why truckers is preceded
+	by the collaboration creator's email, its to disambiguate two groups with the same name. In a later version we will suppress emails in favor of nicknames). Notice that we show both the sharers of the items into the collaboration, as well as the multiple tags that came from this sharing (2).
+</p>
 </li>
 </ol>
 </p>
